Fix Some spacing on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -221,6 +221,7 @@ footer ul {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    width: 75%;
   }
 
   #social-icons img {
